# agents-toolkit

./: 404.html  CHANGELOG.md  LICENSE  PR_SUMMARY.md  README.md  index.html  mkdocs.yml  pyproject.toml  send_broadcast_selenium.py  sitemap.xml
.cursor/rules/: specify-rules.mdc
.github/workflows/: cd.yml  ci.yml  docs.yml
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: index.md
docs/architecture/: flows-integration-proposal.md
docs/getting-started/: core-concepts.md  installation.md  quickstart.md
docs/user-guide/: broadcasts.md  contacts.md  context.md  flows-client.md  flows.md  responses.md  skills.md  tools.md
getting-started/core-concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
specs/001-flows-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-flows-contacts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
user-guide/broadcasts/: index.html
user-guide/context/: index.html
user-guide/flows-client/: index.html
user-guide/responses/: index.html
user-guide/skills/: index.html
user-guide/tools/: index.html
weni/: __init__.py
weni/broadcasts/: __init__.py  broadcast.py  messages.py  sender.py
weni/components/: __init__.py  component.py
weni/contacts/: __init__.py  contact.py  sender.py
weni/context/: __init__.py  context.py  preprocessor_context.py
(+64 files in other folders)
