[tool.poetry]
name = "agents-toolkit"
version = "0.1.0"
description = ""
authors = ["Paulo Bernardo <paulo.bernardo@weni.ai>"]
readme = "README.md"
packages = [
    { include = "weni" }
]

[tool.poetry.dependencies]
python = ">=3.10"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.6"
mypy = "^1.15.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
