[tool.poetry]
name = "weni-agents-toolkit"
version = "2.3.0a4"
description = ""
authors = ["Paulo Bernardo <paulo.bernardo@weni.ai>"]
readme = "README.md"
packages = [
    { include = "weni" }
]
exclude = ["**/tests"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.6"
mypy = "^1.15.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.50"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

[tool.pytest.ini_options]
addopts = "-s -vv --cov=weni --cov-report term-missing"

[tool.coverage.run]
branch = true
source = ["weni"]
omit = ["*/tests/*"]

[tool.mypy]
files = ["weni"]
